samples/_failures_safe/1761348836_eedd15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55c51772.c: In function ‘main’:
./samples/SAFE/__tmp_55c51772.c:147:9: error: expected declaration or statement at end of input
  147 |         printf("Enter choice: ");
      |         ^~~~~~
./samples/SAFE/__tmp_55c51772.c:147:9: error: expected declaration or statement at end of input
